--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.8.6",
     "mysql2": "^2.0.0",
     "sequelize": "^5.21.2",
     "yup": "^0.27.0"
