--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
   "name": "turma09",
+  "author": "Americo L Bocchini",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/bocchini/gympoint"
+  },
+  "description": "Exercicio proposto Rocket seat, gerenciamento de academia",
   "scripts": {
     "dev": "nodemon src/server.js",
     "dev:debug": "nodemon --inspect src/server.js"
